--- a/MoonNight/app/src/main/res/layout/fragment_home.xml
+++ b/MoonNight/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,7 @@
     android:gravity="center">
 
     <Button
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,6 +18,7 @@
         android:background="#ECA7A7" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
@@ -32,6 +34,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -47,6 +50,7 @@
             android:orientation="vertical">
 
             <Button
+                android:id="@+id/button4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -62,6 +66,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/button5"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -71,6 +76,7 @@
                     android:background="#9979D3"/>
 
                 <Button
+                    android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
