--- a/MoonNight/app/src/main/res/layout/fragment_profile.xml
+++ b/MoonNight/app/src/main/res/layout/fragment_profile.xml
@@ -1,17 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E91E63"
+    android:background="@color/white"
     android:orientation="vertical"
     android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="프로필"
-        android:textColor="@color/black"
-        android:textSize="40sp"/>
+    <Button
+        android:id="@+id/center"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:background="#9C5656"
+        android:text="leftbottom"
+        android:textSize="30sp" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/rightbottom"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/center"
+        android:layout_toRightOf="@id/center"
+        android:background="#F1DD2B"
+        android:text="rightbottom"
+        android:textColor="@color/black"
+        android:textSize="30sp"/>
+
+    <Button
+        android:id="@+id/leftbottom"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/rightbottom"
+        android:layout_toLeftOf="@id/rightbottom"
+        android:background="#4FB6E4"
+        android:text="leftbottom"
+        android:textSize="30sp" />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/leftbottom"
+        android:layout_toRightOf="@id/leftbottom"
+        android:background="#A1DA5E"
+        android:text="rightbottom"
+        android:textSize="30sp" />
+
+
+</RelativeLayout>
