--- a/MoonNight/app/src/main/res/layout/activity_main.xml
+++ b/MoonNight/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,11 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
-        android:layout_width="412dp"
-        android:layout_height="52dp"
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
         android:background="#FFEB3B"
         app:itemIconSize="30dp"
         app:itemIconTint="@drawable/color"
-
         app:itemTextColor="@drawable/color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
