--- a/MoonNight/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/MoonNight/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/ic_baseline_home_24" />
+        android:icon="@drawable/ic_baseline_home_24"
+        android:title="Linear" />
     <item
         android:id="@+id/menu_ranking"
+        android:title="Frame"
         android:icon="@drawable/ic_baseline_format_list_numbered_24"/>
     <item
         android:id="@+id/menu_profile"
+        android:title="Relative"
         android:icon="@drawable/ic_baseline_person_24"/>
 </menu>
