--- a/BottomNavigationViewKotlin/app/src/main/res/layout/activity_main.xml
+++ b/BottomNavigationViewKotlin/app/src/main/res/layout/activity_main.xml
@@ -5,35 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#706C6C">
+    android:background="@color/white">
 
     <FrameLayout
         android:id="@+id/fragments_frame"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/bottom_nav"
-        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </FrameLayout>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:background="#4AD6AF"
+        app:menu="@menu/bottom_nav_menu"
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="57dp"
-        android:background="#FFEB3B"
-        app:itemIconSize="30dp"
-        app:itemIconTint="@drawable/color"
-        app:itemTextColor="@drawable/color"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
-
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
