--- a/MoonNight/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/MoonNight/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,4 +12,7 @@
         android:id="@+id/menu_profile"
         android:title="Relative"
         android:icon="@drawable/ic_baseline_person_24"/>
+    <item
+        android:id="@+id/menu_policy"
+        android:title="Policy"/>
 </menu>
