--- a/Kotlin/BottomNavigationViewKotlin/app/src/main/res/values/colors.xml
+++ b/Kotlin/BottomNavigationViewKotlin/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#8F8E8E</color>
-    <color name="mint">#4AD6AF</color>
+    <color name="mint">#3EAA8C</color>
 </resources>
