--- a/Java/BottomNavigationViewJava/app/src/main/res/layout/activity_main.xml
+++ b/Java/BottomNavigationViewJava/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,8 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="61dp"
-        android:background="#3EE4CC"
+        android:layout_height="54dp"
+        android:background="#3EDAC3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
