--- a/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/activity_main.xml
@@ -17,13 +17,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:background="#4AD6AF"
-        app:menu="@menu/bottom_nav_menu"
         android:id="@+id/bottom_nav"
+        app:itemIconTint="@drawable/color"
+        app:itemTextColor="@drawable/color"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
+        android:background="#4AD6AF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
