--- a/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/fragment_mypage.xml
+++ b/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/fragment_mypage.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Page"
+        android:text="마이페이지"
         android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
