--- a/Kotlin/MediaPlayerKotlin/app/src/main/res/layout/activity_mediaplayer.xml
+++ b/Kotlin/MediaPlayerKotlin/app/src/main/res/layout/activity_mediaplayer.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="#5C5C5C"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MediaPlayerActivity">
 
     <SeekBar
         android:layout_marginTop="400dp"
@@ -84,7 +84,7 @@
             android:layout_width="360dp"
             android:layout_height="360dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/musiccover" />
+            android:src="@drawable/wakeup" />
 
     </androidx.cardview.widget.CardView>
 
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/happiness"
-        android:text="Wake up"
+        android:text="Wake Up (Prod. 코드 쿤스트)"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
@@ -106,7 +106,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/happiness"
-        android:text="아우릴고트, 신스, 안병웅, 태버, 조광일"
+        android:text="개코, 아우릴고트, SINCE, 안병웅, Tabber, 조광일"
         android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
