--- a/Kotlin/MediaPlayerKotlin/app/src/main/res/layout/activity_mediaplayer.xml
+++ b/Kotlin/MediaPlayerKotlin/app/src/main/res/layout/activity_mediaplayer.xml
@@ -8,8 +8,8 @@
     tools:context=".MediaPlayerActivity">
 
     <SeekBar
-        android:layout_marginTop="400dp"
         android:id="@+id/seekbar"
+        android:layout_marginTop="400dp"
         android:layout_width="310dp"
         android:layout_height="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,52 +68,63 @@
         app:layout_constraintTop_toBottomOf="@+id/seekbar"
         app:layout_constraintVertical_bias="0.234" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="360dp"
-        android:layout_height="360dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cardView2"-->
+<!--        android:layout_width="360dp"-->
+<!--        android:layout_height="360dp"-->
+<!--        android:layout_marginLeft="10dp"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        app:cardCornerRadius="20dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/seekbar"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
 
-        <ImageView
-            android:layout_width="360dp"
-            android:layout_height="360dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/wakeup" />
+<!--        <ImageView-->
+<!--            android:layout_width="360dp"-->
+<!--            android:layout_height="360dp"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            android:src="@drawable/wakeup"/>-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/happiness"
-        android:text="Wake Up (Prod. 코드 쿤스트)"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.329" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/singer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
         android:fontFamily="@font/happiness"
-        android:text="개코, 아우릴고트, SINCE, 안병웅, Tabber, 조광일"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/cover"
+        android:layout_width="360dp"
+        android:layout_height="360dp"
+        app:layout_constraintBottom_toTopOf="@+id/seekbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/singer"
+        app:layout_constraintVertical_bias="0.185" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
