--- a/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/fragment_meal.xml
+++ b/Kotlin/BottomNavigationViewKotlin/app/src/main/res/layout/fragment_meal.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="급식"
+        android:text="길근우 왔다감"
         android:textColor="@color/black"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
