--- a/Kotlin/MoonNight/app/src/main/res/layout/activity_main2.xml
+++ b/Kotlin/MoonNight/app/src/main/res/layout/activity_main2.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/bmjua_ttf"
-        android:text="달밤"
+        android:text="506호"
         android:textColor="@color/white"
         android:textSize="80sp"
         app:layout_constraintBottom_toBottomOf="@+id/backgroundimage"
