--- a/Kotlin/MoonNight/app/src/main/res/layout/activity_register.xml
+++ b/Kotlin/MoonNight/app/src/main/res/layout/activity_register.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="@font/bmjua_ttf"
-        android:text="이름"
+        android:text="아이디"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.133"
@@ -59,41 +59,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/bmjua_ttf"
-        android:text="아이디"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/bmjua_ttf"
-        android:text="이메일"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/bmjua_ttf"
         android:text="비밀번호"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/et_id" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -103,15 +77,41 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.147"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/bmjua_ttf"
+        android:text="이름"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.128"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/bmjua_ttf"
+        android:text="학번"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.129"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText5" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/et_id"
         android:layout_width="297dp"
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#6A6868"
-        android:hint="ex)홍길동"
+        android:hint="ex)abc123"
         android:textColorHint="@color/gray"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -125,7 +125,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#6A6868"
-        android:hint="ex)abc123"
+        android:hint="ex)example1234"
         android:textColorHint="@color/gray"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -139,7 +139,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#6A6868"
-        android:hint="ex)example@gmail.com"
+        android:hint="ex)example1234"
         android:textColorHint="@color/gray"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -153,7 +153,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#6A6868"
-        android:hint="비밀번호를 입력해주세요"
+        android:hint="홍길동"
         android:textColorHint="@color/gray"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -168,7 +168,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#6A6868"
-        android:hint="비밀번호를 다시 입력해주세요"
+        android:hint="1234"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/gray"
