--- a/Kotlin/WebViewPractice/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/WebViewPractice/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,10 @@
     <WebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
