--- a/Java/BottomNavigationViewJava/app/src/main/res/menu/bottom_nav.xml
+++ b/Java/BottomNavigationViewJava/app/src/main/res/menu/bottom_nav.xml
@@ -14,7 +14,7 @@
         android:title="공지"
         android:icon="@drawable/ic_baseline_notifications_24"/>
     <item
-        android:id="@+id/mneu_mypage"
+        android:id="@+id/menu_mypage"
         android:title="마이페이지"
         android:icon="@drawable/ic_baseline_person_24"/>
 
