--- a/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintBottom_toTopOf="@id/etMemo"/>
+
     <EditText
         android:id="@+id/etMemo"
         android:layout_width="280dp"
@@ -36,9 +43,5 @@
         app:layout_constraintLeft_toRightOf="@id/etMemo"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/etMemo"/>
-    
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width=""
-        android:layout_height=""
 
 </androidx.constraintlayout.widget.ConstraintLayout>
