--- a/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
+++ b/Kotlin/Memo/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:text="Add"
         android:textAllCaps="false"
+        android:background="@drawable/button_red"
         app:layout_constraintLeft_toRightOf="@id/etMemo"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/etMemo"/>
